# drf-spectacular-websocket

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yml
drf_spectacular_websocket/: decorators.py  settings.py
drf_spectacular_websocket/schemas/: __init__.py  schema.py
requirements/: base.txt  packaging.txt
src/drf_spectacular_websocket/: __init__.py  apps.py  decorators.py  settings.py  types.py
src/drf_spectacular_websocket/schemas/: __init__.py  consumer_schema.py  schema.py
src/drf_spectacular_websocket/templates/drf_spectacular/: swagger_ui.js
tests/: asgi.py  conftest.py  consumers.py  expected_schemas.py  serializers.py  test_schema.py
tests/schemas/: expected_data.py  test_router.py  test_schema.py
